# python-project-template

./: .coveragerc  .pre-commit-config.yaml  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: check-lint.yaml  dockerhub.yaml  release-dockerhub.yaml  release-github.yaml  release-pypi.yaml
pypi_package_project/: __init__.py  __main__.py  cli.py
python_project/: __init__.py  __main__.py  cli.py
requirements/: dev.txt  test.txt
requirements.d/: base.txt
